--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<html>
+<head>
+</head>
+<body>
+<div class=”container”>
+ <br>
+ <div class=”jumbotron”>
+ <h1 class=”display-4"> Send Message</h1>
+ <br>
+ <input id = “name” class=”form-control” placeholder=”Name”>
+ <br>
+ <textarea id = “message” class=”form-control” placeholder=”Your Message Here”>
+</textarea>
+ <br>
+ <button id=”send” class=”btn btn-success”>Send</button>
+ </div>
+ <div id=”messages”>
+</div>
+</div>
+<script>
+  $(() => {
+    $("#send").click(()=>{
+       sendMessage({
+          name: $("#name").val(),
+          message:$("#message").val()});
+        })
+      getMessages()
+    })
+function addMessages(message){
+   $(“#messages”).append(`
+      <h4> ${message.name} </h4>
+      <p>  ${message.message} </p>`)
+   }
+function getMessages(){
+  $.get(‘http://localhost:3000/messages', (data) => {
+   data.forEach(addMessages);
+   })
+ }
+function sendMessage(message){
+   $.post(‘http://localhost:3000/messages', message)
+ }
+</script>
+<script src=”/socket.io/socket.io.js”></script>
+</body>
 </html>
